--- a/mgrplane/src/client/Makefile
+++ b/mgrplane/src/client/Makefile
@@ -1,18 +1,28 @@
 TOP=../..
 include $(TOP)/mk/env.mk
 
-
 DIR=client
 TARGET=$(TOP)/lib/lib$(DIR).a
 BUILD_DIR=$(TOP)/build/$(DIR)
-SOURCES:=$(wildcard *.c)
+
+SOURCES:=$(Y_SOURCES) $(L_SOURCES)
+SOURCES+=$(wildcard *.c) cparser_tree.c
+
 OBJS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.o,$(SOURCES)))
 DEPS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.d,$(SOURCES)))
 
-PROJ_CFLAGS += -I.  
+PROJ_CFLAGS += -I. 
+
+CLI_FLAGS += -D TEST_LABEL1
 
 .PHONY: all clean
 
+
 all:$(TARGET)
 
+
 include $(TOP)/mk/rule.mk
+
+
+cparser_tree.c: test.cli test_included.cli
+	./mk_parser.py $(CLI_FLAGS) test.cli
