update cli code

--- a/mgrplane/Makefile
+++ b/mgrplane/Makefile
@@ -1,23 +1,34 @@
 TOP=.
 include $(TOP)/mk/env.mk
 export PROJ_DIR=$(PWD)
+
+
+################DIRS##################
 SRV_DIRS = $(TOP)/src/srv/srvcore
 SRV_DIRS += $(TOP)/src/srv/srvnet
 CLIENT_DIRS = $(TOP)/src/client
+COMMON_DIRS = $(TOP)/src/common
 
-SRC_DIRS = $(SRV_DIRS) $(CLIENT_DIRS)
+SRC_DIRS = $(SRV_DIRS) $(CLIENT_DIRS) $(COMMON_DIRS)
+
+################PROGS USE LOCAL LIBS##################
+COMMON_LDFLAGS = $(TOP)/lib/libcommon.a
 
 PROG_SRV_LDFLAGS = $(TOP)/lib/libsrvcore.a
 PROG_SRV_LDFLAGS += $(TOP)/lib/libsrvnet.a
+PROG_SRV_LDFLAGS += $(COMMON_LDFLAGS)
+
+
 PROG_CLIENT_LDFLAGS = $(TOP)/lib/libclient.a
+PROG_CLIENT_LDFLAGS += $(COMMON_LDFLAGS)
 
-
+################PROGS##################
 PROGS = $(TOP)/bin/srv  $(TOP)/bin/cli 
 
 export PROG_SRV_LDFLAGS PROG_CLIENT_LDFLAGS
 
 
-all: $(SRC_DIRS) $(PROGS)
+all: $(SRC_DIRS) $(PROGS) 
 
 
 $(SRC_DIRS):
