--- a/mgrplane/src/common/Makefile
+++ b/mgrplane/src/common/Makefile
@@ -1,28 +1,18 @@
 TOP=../..
 include $(TOP)/mk/env.mk
 
-DIR=client
+
+DIR=common
 TARGET=$(TOP)/lib/lib$(DIR).a
 BUILD_DIR=$(TOP)/build/$(DIR)
-
-SOURCES:=$(Y_SOURCES) $(L_SOURCES)
-SOURCES+=$(wildcard *.c) cparser_tree.c
-
+SOURCES:=$(wildcard *.c)
 OBJS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.o,$(SOURCES)))
 DEPS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.d,$(SOURCES)))
 
-PROJ_CFLAGS += -I.  -I$(TOP)/src/common
-
-CLI_FLAGS += -D TEST_LABEL1
+PROJ_CFLAGS += -I.  
 
 .PHONY: all clean
 
-
 all:$(TARGET)
 
-
 include $(TOP)/mk/rule.mk
-
-
-cparser_tree.c: test.cli test_included.cli
-	./mk_parser.py $(CLI_FLAGS) test.cli
