--- a/mgrplane/Makefile
+++ b/mgrplane/Makefile
@@ -6,6 +6,7 @@ export PROJ_DIR=$(PWD)
 ################DIRS##################
 SRV_DIRS = $(TOP)/src/srv/srvcore
 SRV_DIRS += $(TOP)/src/srv/srvnet
+SRV_DIRS += $(TOP)/src/srv/srvpow
 CLIENT_DIRS = $(TOP)/src/client
 COMMON_DIRS = $(TOP)/src/common
 
@@ -16,6 +17,7 @@ COMMON_LDFLAGS = $(TOP)/lib/libcommon.a
 
 PROG_SRV_LDFLAGS = $(TOP)/lib/libsrvcore.a
 PROG_SRV_LDFLAGS += $(TOP)/lib/libsrvnet.a
+PROG_SRV_LDFLAGS += $(TOP)/lib/libsrvpow.a
 PROG_SRV_LDFLAGS += $(COMMON_LDFLAGS)
 
 
