--- a/mgrplane/src/srv/srvpow/Makefile
+++ b/mgrplane/src/srv/srvpow/Makefile
@@ -2,14 +2,14 @@ TOP=../../..
 include $(TOP)/mk/env.mk
 
 
-DIR=srvnet
+DIR=srvpow
 TARGET=$(TOP)/lib/lib$(DIR).a
 BUILD_DIR=$(TOP)/build/$(DIR)
 SOURCES:=$(wildcard *.c)
 OBJS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.o,$(SOURCES)))
 DEPS:=$(addprefix $(BUILD_DIR)/,$(subst .c,.d,$(SOURCES)))
 
-PROJ_CFLAGS += -I.  -I$(TOP)/src/srv/srvpow -I$(TOP)/../include
+PROJ_CFLAGS += -I.  -I$(TOP)/../include
 
 .PHONY: all clean
 
